2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* dir.c (diskfs_lookup_hard, diskfs_dirempty): Call
	diskfs_set_node_atime instead of setting dp->dn_set_atime.
	* inode.c (read_symlink_hook): Likewise.

2006-03-15  Thomas Schwinge  <tschwinge@gnu.org>

	* dir.h (DIRECT_NAMELEN): Don't use ?: as a lvalue.

2002-10-03  Roland McGrath  <roland@frob.com>

	* dir.h (MAXNAMLEN): #undef before defining.

2002-07-31  Roland McGrath  <roland@frob.com>

	* dir.c (diskfs_direnter_hard): Fix test in last change.

2002-06-08  Roland McGrath  <roland@frob.com>

	* inode.c (diskfs_cached_lookup): Use ino_t for argument.

	* dir.c (diskfs_direnter_hard): Use size_t for OLDSIZE.
	Fail with EOVERFLOW when it would exceed that width.

	* alloc.c, dir.c: Use %Ld format for ino_t values.
	* alloc.c (diskfs_alloc_node): Use %Ld format for blkcnt_t values.

2002-05-08  Roland McGrath  <roland@frob.com>

	* main.c (diskfs_append_args): Fix argument type.
	(main): Use %z format modifier for size_t arg.
	* dir.c (dirscanblock): Use %z format modifier for vm_address_t arg.
	(diskfs_dirempty): int -> vm_address_t
	(count_dirents): int -> size_t
	(diskfs_get_directs): u_int -> size_t

2002-03-11  Roland McGrath  <roland@frob.com>

	* Makefile (ufs.static): Depend on
	$(boot-store-types:%=../libstore/libstore_%.a).

2001-11-21  Roland McGrath  <roland@frob.com>

	* inode.c (read_disknode): Just always call getpid for the fsid value.

2001-10-01  Marcus Brinkmann  <marcus@gnu.org>

	* ufs.h (swab_long_long): Use LL, not lL, for constant.
	Submitted by Maurizio Boriani <baux@debian.org>.

2001-08-09  Roland McGrath  <roland@frob.com>

	* inode.c (diskfs_get_translator): Fail with EFTYPE if the length
	field stored on disk is unreasonable.  Don't crash on ENOMEM.
	Use memcpy instead of bcopy.

2001-06-09  Mark Kettenis  <kettenis@gnu.org>

	* inode.c (diskfs_set_statfs): If number of free blocks is less
	than the number of reserved blocks, set the number of available
	blocks to 0.
