@@ -1,3 +1,8 @@
+2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* inode.c (read_disknode, write_node): Adapt to ``struct stat''
+	changes.
+
 2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* dir.c (diskfs_lookup_hard, diskfs_dirempty): Call
